Fix T47827: Single Channel Preview Error

Fix by @sergey with own fix for big endian.